[metadata]
name = createInput
version = attr: createInput._version.__version__
author = Xia Feng
author_email = xia.feng@noaa.gov
description = A libray to create input data and files needed for caibrating NextGen formulations
long_description = file: README.md
long_description_content_type = text/markdown
license = USDOC
license_files = LICENSE
url = https://github.com/Noaa-OWP/NextGen_Model_Calibration/tree/master/python/createInput
project_urls =
    source = https://github.com/NOAA-OWP/NextGen_Model_Calibration/python/createInput/src 
    Examples = https://github.com/NOAA-OWP/NextGen_Model_Calibration/python/createInput/examples 
keywords = hydrology, calibration 
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
include_package_data = True
packages = createInput 
package_dir = 
    createInput = src
python_requires = >=3.7
install_requires =
    geopandas
    matplotlib
    pandas~=1.1.2
    pyarrow
    pydantic<2.0.0
    pyyaml
    scipy
    tables
    hydrotools.metrics
    hydrotools.nwis_client
    pyswarms
    hypy@git+https://github.com/noaa-owp/hypy@master#egg=hypy&subdirectory=python
    ngen.config_gen@git+https://github.com/noaa-owp/ngen-cal@master#egg=ngen_config_gen&subdirectory=python/ngen_config_gen
    ngen.cal@git+https://github.com/noaa-owp/NextGen_Model_Calibration@master#egg=ngen_cal&subdirectory=python/runCalibValid/ngen_cal
    ngen.config@git+https://github.com/noaa-owp/NextGen_Model_Calibration@master#egg=ngen_config&subdirectory=python/runCalibValid/ngen_conf

[options.packages.find]
where = src
