[metadata]
name = ngen.cal
version = attr: ngen.cal._version.__version__
author = Nels J. Frazier
author_email = nels.frazier@noaa.gov
description = Suite of tools for calibration NGEN models.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/ngen-cal
project_urls =
    Source = https://github.com/NOAA-OWP/ngen-cal/tree/master/python/ngen_cal
    Tracker = https://github.com/NOAA-OWP/ngen-cal/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    pydantic
    pandas>=1.1.2
    geopandas
    hydrotools.metrics
    git+https://github.com/noaa-owp/hypy@master#egg=hypy&subdirectory=python
    git+https://github.com/noaa-owp/ngen_cal@master#egg=hypy&subdirectory=python/ngen_conf
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
