[metadata]
name = ngen.config
version = attr: ngen.config._version.__version__
author = Nels J. Frazier
author_email = nels.frazier@noaa.gov
description = ngen configuration file generation and validation library
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/ngen-cal
project_urls =
    Source = https://github.com/NOAA-OWP/ngen-cal/tree/master/python/ngen_conf
    Tracker = https://github.com/NOAA-OWP/ngen-cal/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    pydantic<2
    geojson_pydantic
    typing_extensions
    ngen_init_config[all] @ git+https://github.com/noaa-owp/ngen-cal@master#egg=ngen_init_config&subdirectory=python/ngen_init_config
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
