[metadata]
name = ngen.config_gen
version = attr: ngen.config_gen._version.__version__
author = Austin Raney
author_email = austin.raney@noaa.gov
description = Library and framework for genrating NextGen BMI model configuration files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/ngen-cal
project_urls =
    Source = https://github.com/NOAA-OWP/ngen-cal/tree/master/python/ngen_config_gen
    Tracker = https://github.com/NOAA-OWP/ngen-cal/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    geopandas
    pandas
    pyarrow
    pydantic<2
    typing_extensions
    ngen_config[all] @ git+https://github.com/noaa-owp/ngen-cal@master#egg=ngen_config&subdirectory=python/ngen_conf
    ngen_init_config[all] @ git+https://github.com/noaa-owp/ngen-cal@master#egg=ngen_init_config&subdirectory=python/ngen_init_config
python_requires = >=3.8
# include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
