[metadata]
name = ngen.init_config
version = attr: ngen.init_config._version.__version__
author = Austin Raney
author_email = araney@lynker.com
description = APIs for describing, parsing, generating, validating, and programmatically accessing NGEN model specific init_config files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = one, two
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/ngen-cal/tree/master/python/ngen_init_config
project_urls =
    Source = https://github.com/NOAA-OWP/ngen-cal/tree/master/python/ngen_init_config
    Tracker = https://github.com/NOAA-OWP/ngen-cal/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    pydantic<2
    typing_extensions
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    f90nml
    pyyaml
    tomli
    tomli_w
namelist =
    f90nml
yaml =
    pyyaml
toml =
    tomli
    tomli_w
all =
    f90nml
    pyyaml
    tomli
    tomli_w

