[metadata]
name = ngen.cal
version = attr: ngen.cal._version.__version__
author = 
    Xia Feng 
    Nels J. Frazier
author_email = 
    xia.feng@noaa.gov
    nels.frazier@noaa.gov
description = A library to perform automatic calibration of NextGen formulations 
long_description = file: README.md
long_description_content_type = text/markdown
license = USDOC
license_files = LICENSE
url = https://github.com/NOAA-OWP/ngen-cal/tree/4cb1c44280e56fd0ac640f0d4e6b5cc57fb3dbd8/python/runCalibValid/ngen_cal 
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir = 
    = src
install_requires =
    pydantic<2.0.0
    pandas~=1.1.2
    geopandas
    matplotlib
    hydrotools.metrics
    hydrotools.nwis_client
    pyarrow
    tables
    hypy @ git+https://github.com/noaa-owp/hypy@master#egg=hypy&subdirectory=python
    pyyaml
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    pytest-mock
