[metadata]
name = ngen.config
version = attr: ngen.config._version.__version__
author = 
    Nels J. Frazier
    Xia Feng
author_email = 
    nels.frazier@noaa.gov
    xia.fen@noaa.gov
description = A library to parse and validate realization configuration file 
long_description = file: README.md
long_description_content_type = text/markdown
license = USDOC
license_files = LICENSE
url = https://github.com/NOAA-OWP/ngen-cal/tree/4cb1c44280e56fd0ac640f0d4e6b5cc57fb3dbd8/python/runCalibValid/ngen_conf 
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    = src
install_requires =
    pydantic<<2.0.0
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
